More replacement of `Collections.singletonList`, `emptyList`, and `emptyMap` with `List.of`/`Map.of` in cases where `List`/`Map` is already imported.
Signed-off-by: currantw <taylor.curran@improving.com>