@@ -5,6 +5,7 @@
 
 package org.opensearch.sql.planner.logical;
 
+import java.util.Collections;
 import java.util.List;
 import java.util.Map;
 import lombok.EqualsAndHashCode;
@@ -26,7 +27,7 @@ public class LogicalNested extends LogicalPlan {
       LogicalPlan childPlan,
       List<Map<String, ReferenceExpression>> fields,
       List<NamedExpression> projectList) {
-    super(List.of(childPlan));
+    super(Collections.singletonList(childPlan));
     this.fields = fields;
     this.projectList = projectList;
   }
